# signet-eval

./: .gitignore  .kin  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TASKS.md  component_map.yaml  constraints.yaml  design.json  design.md  pact.yaml  prompt.md  pyproject.toml  schema_hints.yaml  sops.md  standards.json  task.md  tasks.json  trust_policy.yaml
.claude-plugin/: plugin.json
.kin/: config
contracts/signet_eval_tool/: interface.py
contracts/signet_eval_tool/history/: 20260321_010345.json
decomposition/: decisions.json  interview.json  tree.json
docs/: index.html
docs/preflight/: architecture.md  component_map.yaml  constraints.yaml  examples.yaml  policy_with_plan_b.yaml  sops.md  task.md
examples/: basic_policy.yaml  enterprise_policy.yaml  proxy.yaml  spending_limits.yaml
hooks/: hooks.json
learnings/: learnings.jsonl
src/: hook.rs  main.rs  mcp_proxy.rs  mcp_server.rs  policy.rs  vault.rs
src/signet_eval_tool/: __init__.py  __main__.py  mcp_server.py  proxy.py  setup.py  signet_eval_tool.py  vault.py
tests/: integration_cli.rs  integration_hook.rs  test_vault.py
tests/signet_eval_tool/: contract_test.py  contract_test_suite.json  emission_test.py
tests/signet_eval_tool/goodhart/: goodhart_test.py  goodhart_test_suite.json
tests/src_policy.rs/: contract_test.py  contract_test_suite.json
