[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signet-eval"
version = "0.1.0"
description = "Claude Code PreToolUse hook policy enforcer"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
signet-eval = "signet_eval_tool:main"

[tool.hatch.build.targets.wheel]
packages = ["src/signet_eval_tool"]
