[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signet-eval"
version = "0.4.0"
description = "Claude Code policy enforcement with encrypted vault and MCP management"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0", "cryptography>=42.0", "mcp>=1.0"]

[project.scripts]
signet-eval = "signet_eval_tool:main"
signet-mcp = "signet_eval_tool.mcp_server:main"
signet-proxy = "signet_eval_tool.proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["src/signet_eval_tool"]
